--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FLASK_APP=weekend_portal.py
 FLASK_DEBUG=1
 DB_URL= postgresql://mlweyikj:jGxa03cTr5EKyq8qti6AUNqJi8UwBVXL@castor.db.elephantsql.com/mlweyikj
+JWT_SECRET_KEY= CZQrOVvSlHix4BaH-2498w
